@@ -1,3 +1,8 @@
+2024-03-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
+	add r-ci-setup actions
+
 2023-04-08  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/Makevars: No longer set a compilation standard, small edits
